# dr_libs-beef

./: .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.sh  build.ts  build_libs.bat
dr_flac/: BeefProj.toml
dr_flac/libs/: dr_flac-windows.lib
dr_flac/libs/windows/: dr_flac.lib  dr_flacd.lib
dr_flac/libs/windows/x64/: dr_flac.lib  dr_flac_d.lib
dr_flac/src/: DRFlac.bf  dr_flac.bf
dr_mp3/: BeefProj.toml
dr_mp3/libs/: dr_mp3-windows.lib
dr_mp3/libs/windows/: dr_mp3.lib  dr_mp3d.lib
dr_mp3/libs/windows/x64/: dr_mp3.lib  dr_mp3_d.lib
dr_mp3/src/: DRMp3.bf  dr_mp3.bf
dr_wav/: BeefProj.toml
dr_wav/libs/: dr_wav-windows.lib
dr_wav/libs/windows/: dr_wav.lib  dr_wavd.lib
dr_wav/libs/windows/x64/: dr_wav.lib  dr_wav_d.lib
dr_wav/src/: DRWav.bf  dr_wav.bf
example/: BeefProj.toml
example/src/: Program.bf
